# fscl-xcore-c

./: README.md  meson.build
.github/: PULL_REQUEST_TEMPLATE.md
code/include/fossil/: xcore.h
code/include/fossil/xcore/: console.h  datetime.h  error.h  fossil.h  parser.h  regex.h  soap.h  stream.h  thread.h
code/include/trilobite/: xcore.h
code/include/trilobite/xcore/: console.h  contract.h  csv.h  datetime.h  fossil.h  ini.h  json.h  lambda.h  lazy.h  observer.h  parser.h  reader.h  regex.h  stream.h  thread.h
code/source/: console.c  contract.c  csv.c  datetime.c  error.c  fossil.c  ini.c  json.c  lambda.c  lazy.c  meson.build  observer.c  parser.c  reader.c  regex.c  soap.c  stream.c  thread.c
demo/: demo_console.c  demo_contract.c  demo_csv.c  demo_datetime.c  demo_fossil.c  demo_ini.c  demo_json.c  demo_lambda.c  demo_lazy.c  demo_observer.c  demo_reader.c  demo_regex.c  demo_stream.c  demo_thread.c  meson.build
demo/data/: eco_products.csv  energy_config.ini  program.fossil  quiz_game.json
test/: meson.build  xtest_console.c  xtest_contract.c  xtest_csv.c  xtest_datetime.c  xtest_error.c  xtest_fossil.c  xtest_ini.c  xtest_json.c  xtest_lambda.c  xtest_lazy.c  xtest_observer.c  xtest_parser.c  xtest_reader.c  xtest_regex.c  xtest_soap.c  xtest_stream.c  xtest_thread.c  xunit_runner.c
test/data/: invalid.json  test_config.ini
